
plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'com.adarshr.test-logger' version '3.2.0'
}

group = 'hexlet.code'
version = '1.0.3-SNAPSHOT'

repositories {
    mavenCentral()
}

compileJava {
    options.release = 20
}

dependencies {
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation(
            'org.junit.jupiter:junit-jupiter:5.9.2',
            'org.assertj:assertj-core:3.24.2'
    )

    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'info.picocli:picocli:4.7.4'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.4'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.15.2'

}

test {
    finalizedBy jacocoTestReport
}

testlogger {
    theme 'mocha'
    slowThreshold 5000
    showPassed true
    showSkipped true
    showFailed true
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}

application {
    mainClass = 'hexlet.code.App'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}
